# keyring-rs

./: Cargo.toml  README.md  build.rs
.github/workflows/: pr_checks.yml
examples/: example.rs
src/: lib.rs  linux.rs  mac.rs  win.rs  windows.rs
src/secret_service/: collection.rs  item.rs  mod.rs  session.rs
src/secret_service/proxy/: mod.rs  secrets.rs  secrets_collection.rs  secrets_item.rs  secrets_prompt.rs  secrets_session.rs
src/wincred/: client.rs  mod.rs
