[package]
name = "c9s-keyring"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]

[target.'cfg(target_os = "windows")'.build-dependencies]
windows = "0.21.1"

[dependencies]
anyhow = "1.0.43"

[target.'cfg(target_os = "windows")'.dependencies]
widestring = "0.5.0"
windows = "0.21.1"

[target.'cfg(target_os = "macos")'.dependencies]
security-framework = "2.3"

[target.'cfg(target_os = "linux")'.dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
zbus = "1.9.2"
zvariant = "2.9.0"
zvariant_derive = "2.9.0"
openssl = "0.10.36"
hkdf = "0.11.0"
aes = "0.7.5"
block-modes = "0.8.1"
sha2 = "0.9"
